Fixed images by cropping them to squares

--- a/public/styles/full-post.css
+++ b/public/styles/full-post.css
@@ -77,9 +77,13 @@ body {
 }
 
 .post-dets img {
-    max-height: 100%;
     vertical-align: middle;
+
+    height:18px;
+    width: 18px;
+
     object-fit: cover;
+    object-position: center center;
 }
 
 .post-dets .author      { color: rgb(183, 183, 183); }
@@ -192,9 +196,12 @@ a {
 
 #author-header img {
     margin: auto;
-    max-height: 100px;
-    width: auto;
-    height: 100%;
+
+    height:100px;
+    width: 100px;
+
+    object-fit: cover;
+    object-position: center center;
 }
 
 #author-desc { opacity: 60%;}
