--- a/public/styles/home-feed.css
+++ b/public/styles/home-feed.css
@@ -46,9 +46,15 @@ body {
 }
 
 #create-post img {
-    height: 100%;
+    height: 40px;
+    width: 40px;
+
     border: 1px solid rgb(172, 172, 172);
     border-radius: 4px;
+
+    
+    object-fit: cover;
+    object-position: center center;
 }
 
 #create-post input {
@@ -174,8 +180,11 @@ body {
 
 .post-dets img {
     object-fit: cover;
-    max-height:100%;
+    object-position: center center; 
     vertical-align: middle;
+
+    height: 18px;
+    width: 20px;
 }
 
 .post p.post-header {
@@ -234,10 +243,14 @@ a {
 }
 
 #profile-img img {
-    max-width: 100px;
+    height:100px;
+    width: 100px;
     
     border: 1px solid rgb(172, 172, 172);
     border-radius: 4px;
+
+    object-fit: cover;
+    object-position: center center;
 }
 
 #profile-dets {
