--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -146,12 +146,18 @@ body {
     margin-bottom: 10px;
 
     max-height: 18.4px;
+
+
 }
 
 .post-dets img {
-    object-fit: cover;
-    max-height:100%;
     vertical-align: middle;
+
+    height:18px;
+    width: 18px;
+
+    object-fit: cover;
+    object-position: center center;
 }
 
 .post p.post-header {
@@ -275,7 +281,10 @@ a { text-decoration: none; }
 
 #author-header img {
     margin: auto;
-    max-height: 100px;
-    width: auto;
-    height: 100%;
+
+    height:100px;
+    width: 100px;
+
+    object-fit: cover;
+    object-position: center center;
 }
